# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[tool.poetry]
name = "adbc_driver_manager"
version = "1.0.0-alpha.0"
description = ""
authors = ["Apache Arrow Developers <dev@arrow.apache.org>"]
license = "Apache-2.0"
homepage = "https://arrow.apache.org"
repository = "https://github.com/apache/arrow-adbc"

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
pandas = { version = ">=1.2,<2", optional = true }
pyarrow = { version = ">=8.0.0", optional = true }
python = ">=3.8"

[tool.poetry.dev-dependencies]
Cython = "^0.29.32"
pandas = ">=1.2"
pyarrow = ">=8.0.0"
pytest = "^7.1.2"
setuptools = "^63.4.0"

[tool.poetry.extras]
dbapi = ["pyarrow"]

[build-system]
requires = ["Cython", "poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
