# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "adbc-driver-netezza"
description = "A libpq-based ADBC driver for working with Netezza."
authors = [{name = "Apache Arrow Developers", email = "dev@arrow.apache.org"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "adbc-driver-manager",
]

[project.optional-dependencies]
dbapi = ["pandas", "pyarrow>=8.0.0"]
test = ["pandas", "polars", "pyarrow>=8.0.0", "pytest"]

[project.urls]
homepage = "https://arrow.apache.org/adbc/"
repository = "https://github.com/apache/arrow-adbc"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "polars: integration tests with polars",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE.txt", "NOTICE.txt"]
packages = ["adbc_driver_netezza"]
py-modules = ["adbc_driver_netezza"]
