# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[tool.poetry]
name = "adbc_driver_postgres"
version = "0.0.0-alpha0"
description = ""
authors = ["Apache Arrow Developers <dev@arrow.apache.org>"]
license = "Apache-2.0"
homepage = "https://arrow.apache.org"
repository = "https://github.com/apache/arrow-adbc"
include = [
    {path = "adbc_driver_postgres/*.so", format = "wheel"},
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
# XXX: setuptools/build.py don't like path dependencies
# adbc_driver_manager = { path = "../adbc_driver_manager/", develop = false }
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
