# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "adbc_core"
description = "Public abstract API, driver manager and driver exporter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
driver_manager = ["dep:libloading"]
manifest = ["dep:serde", "dep:semver", "dep:spdx", "dep:toml"]

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
libloading = { version = "0.8", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
semver = { version = "1.0.26", features = ["serde"], optional = true }
spdx = { version = "0.10.8", optional = true }
toml = { version = "0.8.23", default-features = false, features = [
    "parse",
], optional = true }

[dev-dependencies]
arrow-select.workspace = true

[package.metadata.docs.rs]
all-features = true
