# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
authors.workspace = true
categories.workspace = true
description = "Public abstract API, driver manager and driver exporter"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "adbc_core"
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
driver_manager = ["dep:toml", "dep:libloading", "dep:windows-sys", "dep:windows-registry"]
driver_manager_test_lib = ["driver_manager"]
driver_manager_test_manifest_user = ["driver_manager_test_lib"]

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
libloading = {version = "0.8", optional = true}
toml = { version = "0.9.0", default-features = false, features = [
    "parse", "display"
], optional = true }

[dev-dependencies]
temp-env = "0.3"
arrow-select.workspace = true
tempfile = "3.20.0"

[package.metadata.docs.rs]
all-features = true

[target.'cfg(windows)'.dependencies]
windows-sys = {version = ">= 0.59.0", features = [
    "Win32_UI_Shell",
    "Win32_Globalization",
    "Win32_System_Com",
], optional = true}
windows-registry = {version = ">= 0.5.3", optional = true}
