[package]
name = "adbc_core"
description = "Public abstract API, driver manager and driver exporter"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
arrow = { workspace = true }
libloading = "0.8"
once_cell = "1.19.0"
